<resources>
    <string name="app_name">Alertify</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="switch_datetime_picker_name">Switch DateTime Picker</string>
    <string name="open_datetime_dialog">Open DateTime Dialog</string>
    <string name="open_datetime_dialog_with_neutral_button">Open DateTime Dialog with Neutral Button</string>
    <string name="clean">Clean</string>
    <string name="label_datetime_dialog">DateTime</string>
    <string name="alertify_heading">ALERTIFY</string>
    <string name="select_item">Select Police Station</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="password_hint">enter atleast 6 words</string>
    <string name="user_name_hint">enter user name</string>
    <string name="ok">Ok</string>
    <string name="maps_api_key">AIzaSyCoDtci5S11xJfMTs4zIJvBoytoIKnfn_Y</string>
    <string name="search">Search...</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="name_hint">enter your name</string>
    <string name="mobile_hint">enter your mobile no</string>
    <string name="cnic_hint">enter your cnic no</string>
    <string name="crime_location_hint">Crime Location</string>
    <string name="crime_evidence_hint">Crime Evidence (Optional)</string>
    <string name="report_crime">Report Crime</string>
    <string name="crime_type_hint">Crime Type</string>
    <string name="your_location_hint">Select Your Location</string>
    <string name="crime_details_hint">Crime Details</string>
    <string name="crime_date_hint">Crime Date</string>
    <string name="crime_time_hint">Crime Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="download">Download</string>
    <string name="direction">Directions</string>
    <string name="emergency_help_text">Emergency help needed?</string>
    <string name="emergency_help_text_hint">Just press the button for emergency services</string>
    <string name="complaints">Complaints</string>
    <string name="police_station">Police Station</string>
    <string name="police_station_fir">Police Station :</string>
    <string name="records">Records</string>
    <string name="emergency">Emergency</string>
    <string name="name">Name</string>
    <string name="cnic">CNIC</string>
    <string name="fir">FIR</string>
    <string name="no_of_fir">No of FIR :</string>
    <string name="district">District :</string>
    <string name="user_sign_up">User Sign-up</string>
    <string name="please_enter_your_details">Please enter your details.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="cnic_no">CNIC No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading_email">loading email....</string>
    <string name="alertify">ALERTIFY</string>
    <string name="feedback">Feedback</string>
    <string name="evidence">Evidence</string>
    <string name="crime_type">Crime Type</string>
    <string name="crime_details">Crime Details</string>
    <string name="crime_location">Crime Location</string>
    <string name="complaint_police_station">Complaint Police Station</string>
    <string name="complaint_datetime">Complaint DateTime</string>
    <string name="crime_datetime">Crime DateTime</string>
    <string name="investigation_status">Investigation Status</string>
    <string name="crime">Crime</string>
    <string name="section">Section:</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="user_login">User Login</string>

    <string-array name="status_array">
        <item>All</item>
        <item>Pending</item>
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="complaint_status_array">
        <item>Pending</item>
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="calender_type">
        <item>Date</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="crimes">Crimes</string>
    <string name="laws">Laws</string>
    <string name="criminals">Criminals</string>
    <string name="criminal_cnic">Criminal CNIC without dashes</string>
    <string name="criminal_name">Criminal name</string>
    <string name="add_criminal">Add Criminal</string>

    <string name="enter_district_e_g_faisalabad">enter district e.g Faisalabad</string>
    <string name="enter_police_station_name">enter police station name</string>
    <string name="enter_number_of_fir">enter number of FIR</string>
    <string name="add_fir_details">Add FIR Details</string>
    <string name="select_investigation_status">Select investigation status</string>
    <string name="directions">Directions</string>
    <string name="user_name">User Name</string>
    <string name="user_phone_no">User Phone No</string>
    <string name="user_cnic">User CNIC</string>
    <string name="request_datetime">Request DateTime</string>
    <string name="request_police_station">Request Police Station</string>
    <string name="user_email">User Email</string>
    <string name="see_analytics">See Analytics</string>
    <string name="date">Date</string>
    <string name="calender_type">Calender Type</string>
    <string name="select_complaint_status">Select Complaint Status</string>
    <string name="analytics">Analytics</string>
    <string name="law">Law</string>
    <string name="enter_section_number_here">enter section number here</string>
    <string name="add_law_details">Add Law Details</string>
    <string name="enter_law_here">enter law here</string>
    <string name="definition">Definition</string>
    <string name="change_password">change password</string>
    <string name="department_admin_login">Department Admin Login</string>
    <string name="police_station_name">Name :</string>
    <string name="police_station_location">Location :</string>
    <string name="police_station_boundary">Boundary :</string>
    <string name="police_station_no">No :</string>
    <string name="dep_admin_name_hint">enter department admin name</string>
    <string name="police_station_location_hint">enter police station\'s location</string>
    <string name="police_station_name_hint">enter police station name</string>
    <string name="police_station_no_hint">enter police station number</string>
    <string name="title_activity_police_station_boundary_maps">PoliceStationBoundaryMapsActivity
    </string>
    <string name="police_station_samanabad_faisalabad">Police Station Samanabad Faisalabad</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="high_authority_sign_up">High Authority Sign-up</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_at_least_6_words">enter at least 6 words</string>
    <string name="email_">Email :</string>
    <string name="name_simple">Name</string>
    <string name="police_station_simple">Police Station</string>
    <string name="select_complaint_investigation_status">Select Complaint Investigation Status</string>
    <string name="select_department_admin">Select Department Admin</string>
    <string name="police_stations">Police Stations</string>
    <string name="department_admins">Department Admins</string>
    <string name="welcome">Welcome to</string>
    <string name="department_admin">Department Admin</string>
    <string name="high_authority">High Authority</string>
    <string name="user">User</string>
</resources>