<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/txt_alertify_main_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/high_authority_sign_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_alertify_main_admin"
            android:layout_marginStart="20dp"
            android:text="@string/please_enter_your_details"
            android:textColor="#676767"
            android:textSize="12sp" />


        <!--        start of name field-->

        <TextView
            android:id="@+id/name_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_detail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/name_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:boxBackgroundColor="#DCDCDC"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cornerRadius="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/enter_your_name"
                android:textColorHint="@color/hint_color"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        end of name field-->


        <!--        start of email field-->

        <TextView
            android:id="@+id/email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="#DCDCDC"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:hint="@string/email_hint"
                android:textColorHint="@color/hint_color"
                android:textCursorDrawable="@drawable/cursor_shape"
                android:textSize="13sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of email field-->

        <!--        start of password field-->

        <TextView
            android:id="@+id/password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:boxBackgroundColor="#DCDCDC"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cornerRadius="25dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/hint_color"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:hint="@string/password_hint"
                android:textColorHint="@color/hint_color"
                android:textCursorDrawable="@drawable/cursor_shape"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        end of password field-->

        <!--        start of signup button-->

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/password_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/app_color"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:cornerRadius="25dp" />

        <!--        end of signup button -->

    </RelativeLayout>

</ScrollView>