<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#3490DC"
    tools:context=".activities.dep_admin.DepAdminLoginActivity">

    <!--    start of alertify logo-->


    <TextView
        android:id="@+id/txt_alertify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/noto_serif_bold"
        android:text="@string/alertify"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <!--    end of alertify logo-->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_alertify"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_shape">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/txt_alertify_main_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/department_admin_login"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/txt_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_alertify_main_admin"
                    android:layout_marginStart="20dp"
                    android:text="@string/please_enter_your_details"
                    android:textColor="#676767"
                    android:textSize="12sp" />



                <!--        start of email field-->

                <TextView
                    android:id="@+id/email_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_detail"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_heading"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="#DCDCDC"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor_shape"
                        android:textSize="13sp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <!--        end of email field-->

                <!--        start of password field-->

                <TextView
                    android:id="@+id/password_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_below="@id/password_heading"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    app:boxBackgroundColor="#DCDCDC"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="false"
                    app:boxStrokeWidthFocused="0dp"
                    app:cornerRadius="25dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/hint_color"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor_shape"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--        end of password field-->

                <!--        start of login button-->

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_below="@id/password_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#3490DC"
                    android:text="@string/login"
                    app:cornerRadius="25dp"
                    android:textColor="@color/white"
                    />

                <!--        end of login button-->

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginBtn"
                    android:layout_centerHorizontal="true"
                    android:indeterminateTint="#3490DC"
                    android:visibility="invisible" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>


</RelativeLayout>